--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
@@ -7,15 +8,25 @@
     <link rel="stylesheet" href="style.css">
     <script src="scripit.js" defer></script>
 </head>
+
 <body>
-    <button id="button-lol">New Book</button>
-    <form action="">
-        <label for="title">Title</label>
-        <input type="text" id="title">
-        <label for="author">Author</label>
-        <input type="text" id="author">
-        <label for="pages">Pages</label>
-        <input type="text" id="pages">
-    </form>
+    <hr>
+    <div class="new-book">
+        <button id="button-lol">New Book</button>
+        <form action="">
+            <label for="title">Title</label>
+            <input type="text" id="title">
+            <label for="author">Author</label>
+            <input type="text" id="author">
+            <label for="pages">Pages</label>
+            <input type="text" id="pages">
+        </form>
+    </div>
+
+    <hr>
+    <div class="book_display">
+
+    </div>
 </body>
+
 </html>
