maybe 80% complete? can make ui nicer ah, but can move on, alhamdulilah

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <input type="text" id="author">
             <label for="pages">Pages</label>
             <input type="text" id="pages">
+            <div class="checkbox_div">
+                <input type="checkbox" id="is_read">
+                <label for="is_read">Have you read the book?</label>
+            </div>
+
         </form>
     </div>
 
